--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 <h3 class="text-center">Search For Movies</h3>
                 <form onsubmit="ValidationEvent()">
                     <input type="text" class="form-control" name="searchText" id="searchText" placeholder="Search Movie">
-                    <button type="submit" value="submit">submit</button>
+                    <br></br>
+                    <button style="align: justify" type="submit" value="submit">submit</button>
                 </form>
             </div>
         </div>
